src-tauri/check_err.txt
    Checking launcherg v0.0.0 (E:\Launcherg-Mod\src-tauri)
error[E0422]: cannot find struct, variant or union type `D2D1_ELLIPSE` in this scope
   --> src\infrastructure\windowsimpl\scaling\toolbar.rs:196:35
    |
196 |                     let ellipse = D2D1_ELLIPSE {
    |                                   ^^^^^^^^^^^^ not found in this scope
    |
help: consider importing this struct
    |
1   + use windows::Win32::Graphics::Direct2D::D2D1_ELLIPSE;
    |

warning: unused import: `windows::core::PCWSTR`
 --> src\infrastructure\windowsimpl\scaling\cursor.rs:2:5
  |
2 | use windows::core::PCWSTR;
  |     ^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default

warning: unused import: `BOOL`
 --> src\infrastructure\windowsimpl\scaling\cursor.rs:3:34
  |
3 | use windows::Win32::Foundation::{BOOL, HWND, POINT, RECT};
  |                                  ^^^^

warning: unused imports: `INPUT_MOUSE`, `INPUT`, `MOUSEEVENTF_ABSOLUTE`, `MOUSEEVENTF_MOVE`, and `SendInput`
 --> src\infrastructure\windowsimpl\scaling\cursor.rs:5:5
  |
5 |     SendInput, INPUT, INPUT_MOUSE, MOUSEEVENTF_ABSOLUTE, MOUSEEVENTF_MOVE,
  |     ^^^^^^^^^  ^^^^^  ^^^^^^^^^^^  ^^^^^^^^^^^^^^^^^^^^  ^^^^^^^^^^^^^^^^

warning: unused imports: `IDC_ARROW` and `LoadCursorW`
 --> src\infrastructure\windowsimpl\scaling\cursor.rs:8:47
  |
8 |     ClipCursor, GetCursorPos, GetWindowLongW, LoadCursorW, SetCursorPos, SetWindowLongW,
  |                                               ^^^^^^^^^^^
9 |     ShowCursor, GWL_EXSTYLE, IDC_ARROW, WS_EX_TRANSPARENT,
  |                              ^^^^^^^^^

warning: unused import: `DXGI_ALPHA_MODE_PREMULTIPLIED`
  --> src\infrastructure\windowsimpl\scaling\processor.rs:23:29
   |
23 |     DXGI_ALPHA_MODE_IGNORE, DXGI_ALPHA_MODE_PREMULTIPLIED, DXGI_FORMAT_B8G8R8A8_UNORM,
   |                             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused imports: `D2D1_ANTIALIAS_MODE_PER_PRIMITIVE`, `D2D1_BRUSH_PROPERTIES`, `D2D1_ROUNDED_RECT`, and `D2D1_TEXT_ANTIALIAS_MODE_DEFAULT`
 --> src\infrastructure\windowsimpl\scaling\toolbar.rs:6:5
  |
6 |     D2D1_ANTIALIAS_MODE_PER_PRIMITIVE, D2D1_BRUSH_PROPERTIES, D2D1_DRAW_TEXT_OPTIONS_NONE,
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^  ^^^^^^^^^^^^^^^^^^^^^
...
9 |     D2D1_ROUNDED_RECT, D2D1_TEXT_ANTIALIAS_MODE_DEFAULT,
  |     ^^^^^^^^^^^^^^^^^  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `DWRITE_MEASURING_MODE_NATURAL`
  --> src\infrastructure\windowsimpl\scaling\toolbar.rs:14:5
   |
14 |     DWRITE_MEASURING_MODE_NATURAL, DWRITE_PARAGRAPH_ALIGNMENT_CENTER, DWRITE_TEXT_ALIGNMENT_CENTER,
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0308]: mismatched types
   --> src\infrastructure\windowsimpl\scaling\processor.rs:342:20
    |
342 | ...   Ok((window_manager, device, context, swap_chain, compute_shader, const_buffer, output_texture, output_uav, toolbar, cursor_manager))
    |       -- ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected a tuple with 9 elements, found one with 10 elements
    |       |
    |       arguments to this enum variant are incorrect
    |
    = note: expected tuple `(WindowManager, ID3D11Device, ID3D11DeviceContext, IDXGISwapChain1, ID3D11ComputeShader, ID3D11Buffer, ID3D11Texture2D, ID3D11UnorderedAccessView, Toolbar)`
               found tuple `(WindowManager, ID3D11Device, ID3D11DeviceContext, IDXGISwapChain1, ID3D11ComputeShader, ID3D11Buffer, ID3D11Texture2D, ID3D11UnorderedAccessView, Toolbar, CursorManager)`
help: the type constructed contains `(WindowManager, ID3D11Device, ID3D11DeviceContext, IDXGISwapChain1, ID3D11ComputeShader, ID3D11Buffer, ID3D11Texture2D, ID3D11UnorderedAccessView, Toolbar, CursorManager)` due to the type of the argument passed
   --> src\infrastructure\windowsimpl\scaling\processor.rs:342:17
    |
342 | ...   Ok((window_manager, device, context, swap_chain, compute_shader, const_buffer, output_texture, output_uav, toolbar, cursor_manager))
    |       ^^^--------------------------------------------------------------------------------------------------------------------------------^
    |          |
    |          this argument influences the type of `Ok`
note: tuple variant defined here
   --> C:\Users\nnnma\.rustup\toolchains\stable-x86_64-pc-windows-msvc\lib/rustlib/src/rust\library\core\src\result.rs:532:5
    |
532 |     Ok(#[stable(feature = "rust1", since = "1.0.0")] T),
    |     ^^

error[E0308]: mismatched types
   --> src\infrastructure\windowsimpl\scaling\processor.rs:346:20
    |
345 | ...ch init_result {
    |       ----------- this expression has type `Result<(WindowManager, ..., ..., ..., ..., ..., ..., ..., ...), ...>`
346 | ... Ok((mut window_manager, device, context, swap_chain, compute_shader, const_buffer, output_texture, output_uav, mut toolbar, mut cursor_manager)) =...
    |        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected a tuple with 9 elements, found one with 10 elements
    |
    = note: expected tuple `(WindowManager, ID3D11Device, ID3D11DeviceContext, IDXGISwapChain1, ID3D11ComputeShader, ID3D11Buffer, ID3D11Texture2D, ID3D11UnorderedAccessView, Toolbar)`
               found tuple `(_, _, _, _, _, _, _, _, _, _)`
    = note: the full name for the type has been written to 'E:\Launcherg-Mod\src-tauri\target\debug\deps\launcherg-c9187fa68479cadd.long-type-12908279494447811376.txt'
    = note: consider using `--verbose` to print the full type name to the console

error[E0599]: no method named `as_ref` found for struct `IDWriteFactory` in the current scope
   --> src\infrastructure\windowsimpl\scaling\toolbar.rs:175:33
    |
175 |                 self.dw_factory.as_ref().unwrap().CreateTextLayout(
    |                                 ^^^^^^
    |
help: there is a method `as_raw` with a similar name
    |
175 -                 self.dw_factory.as_ref().unwrap().CreateTextLayout(
175 +                 self.dw_factory.as_raw().unwrap().CreateTextLayout(
    |

warning: unused import: `windows::core::Interface`
 --> src\infrastructure\windowsimpl\scaling\toolbar.rs:2:5
  |
2 | use windows::core::Interface;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^

Some errors have detailed explanations: E0308, E0422, E0599.
For more information about an error, try `rustc --explain E0308`.
warning: `launcherg` (bin "launcherg") generated 8 warnings
error: could not compile `launcherg` (bin "launcherg") due to 4 previous errors; 8 warnings emitted
